--- a/assets/gigi.css
+++ b/assets/gigi.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #EEEEEE;
+}
+
 .gigi {
   width: 150px;
   border-radius: 100%;
@@ -6,6 +10,11 @@
 .blabla {
   background-color: lightblue;
 }
-.kita > img {
+
+.kita>img {
   width: 100%;
+}
+
+.bb {
+  font-weight: bold;
 }
